# lab-devices

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
docs/: experiment-engine-limitations.md  lab-bridge-api-reference.md  morbidostat_algorithm.md  workflow-schema.md
docs/studio-guide/: 01-overview.md  index.md
docs/ui-audit/: 2026-07-17.md
docs/ui-improvements/: improvements.md
docs/ui-improvements-2/: improvements.md
docs/ui-improvements-4/: improvements.md
docs/ui-polish/: probe.json
examples/: README.md  adaptive-bioreactor-tour.json  morbidostat-demo-speed.json  morbidostat.json
src/lab_devices/: __init__.py  client.py  discovery.py  errors.py  jobs.py  transport.py
tests/: conftest.py  experiment_role_helpers.py  experiment_run_helpers.py  experiment_validate_helpers.py  fakeclock.py  fakelab.py  test_client.py  test_densitometer.py  test_device_base.py  test_discovery.py  test_docs_workflow_schema.py  test_errors.py  test_examples_adaptive_bioreactor.py  test_examples_morbidostat.py  test_experiment_abort.py  test_experiment_abort_block.py  test_experiment_abort_cancel.py  test_experiment_alarm_block.py  test_experiment_analyze.py  test_experiment_binding_types.py  test_experiment_block_ids.py  test_experiment_blocks.py  test_experiment_catalog.py  test_experiment_clock.py  test_experiment_computed.py  test_experiment_constants.py  test_experiment_context.py  test_experiment_control.py  test_experiment_diagnostics.py  test_experiment_dispatch.py  test_experiment_duration_expr.py  test_experiment_durations.py  test_experiment_e2e_computed.py  test_experiment_e2e_concurrent.py  test_experiment_e2e_invariants.py  test_experiment_e2e_sequential.py  test_experiment_errors.py  test_experiment_evaluate.py  test_experiment_execute_measure.py  test_experiment_expand.py  (+59 more)
webapp/: Dockerfile  README.md
webapp/backend/: .gitignore  pyproject.toml
webapp/backend/experiment_studio/: __init__.py  app.py  config.py  db.py  device_names.py  docs_store.py  inputs.py  labs.py  records.py  roles.py  runner.py  sinks.py
webapp/backend/experiment_studio/api/: catalog.py  deps.py  experiments.py  health.py  labs.py  records.py  runs.py  validate.py  ws.py
webapp/backend/tests/: conftest.py  devserver.py  runsupport.py  test_catalog.py  test_config.py  test_db.py  test_device_command_api.py  test_device_names.py  test_device_names_api.py  test_docs_store.py  test_experiments_api.py  test_expr_golden.py  test_health.py  test_inputs.py  test_labs_api.py  test_lifespan.py  test_records.py  test_records_api.py  test_roles.py  test_runner.py  test_runner_controls.py  test_runner_guards.py  test_runs_api.py  test_sinks.py  test_spa.py  test_validate_api.py  test_ws_api.py
webapp/fixtures/: gen_run.py  gen_torture.py  group-scope-refs.json  invalid-roles.json  invalid-workflow.json  ui-audit-run.json  ui-audit-torture.json  valid-constants.json  valid-control-blocks.json  valid-od-growth.json
webapp/frontend/: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.app.json  (+1 more)
(+340 files in other folders)
