[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-devices"
version = "0.1.0"
description = "Async Python library to discover and manage lab devices (pump, valve, densitometer)."
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "mypy>=1.8", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/lab_devices"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/lab_devices"]

[tool.ruff]
line-length = 100
target-version = "py311"
