[build-system]
requires = ["poetry-core>=2.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bioexperiment-lab-devices"
version = "0.8.1"
description = "Async Python library to discover and manage lab devices (pump, valve, densitometer)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "khamitovdr", email = "khamitov.personal@gmail.com" }]
requires-python = ">=3.11"
keywords = ["lab", "automation", "devices", "async", "httpx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "mypy>=1.8", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/bioexperiment-lab-devices/lab-devices"
Repository = "https://github.com/bioexperiment-lab-devices/lab-devices"
Issues = "https://github.com/bioexperiment-lab-devices/lab-devices/issues"

[tool.poetry]
packages = [{ include = "lab_devices", from = "src" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/lab_devices"]

[tool.ruff]
line-length = 100
target-version = "py311"
