[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "experiment-studio"
version = "0.9.0" # x-release-please-version
description = "Web UI for building and running lab_devices experiments."
requires-python = ">=3.11"
dependencies = [
    "bioexperiment-lab-devices",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.4",
    "httpx>=0.27",
    "httpx-ws>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["experiment_studio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["experiment_studio"]

[tool.ruff]
line-length = 100
target-version = "py311"
